--- a/project.html
+++ b/project.html
@@ -47,6 +47,13 @@
                                     </div>
                                     <h3 class="project-name">FYRE | Smart Kitchen Automation | Interaction Design</h3>
                                 </button>
+
+                                <button class="project-card" onclick="window.open('https://www.behance.net/gallery/234739285/ELF-DASH-VR-Game-Design', '_blank')">
+                                    <div class="project-image">
+                                        <img src="images/projects/elf2.png" alt="Interaction Design Project 3" class="project-img">
+                                    </div>
+                                    <h3 class="project-name">Elf Dash | VR Game Design | AR/VR</h3>
+                                </button>
                             </div>
 
                             <h2 class="section-title" id="visual-projects">Visual Design Projects</h2>
