--- a/project.html
+++ b/project.html
@@ -60,6 +60,13 @@
 
                             <!-- Projects Grid -->
                             <div class="projects-grid">
+                                <button class="project-card" onclick="window.open('https://www.behance.net/gallery/241849135/ProjectPause-Menopause-Awareness-Thesis-Project')">
+                                    <div class="project-image">
+                                        <img src="images/projects/pause2.png" alt="Interaction Design Project 2" class="project-img">
+                                    </div>
+                                    <h3 class="project-name">ProjectPause | Menopause Awareness | Experience Design</h3>
+                                </button>
+                                
                                 <button class="project-card" onclick="window.open('https://www.behance.net/gallery/232393131/Hotel-Shivam-Intl-Building-A-Visual-Identity', '_blank')">
                                     <div class="project-image">
                                         <img src="images/projects/hsi2.png" alt="Visual Design Project 1" class="project-img">
