--- a/project.html
+++ b/project.html
@@ -34,6 +34,13 @@
 
                             <!-- Projects Grid -->
                             <div class="projects-grid">
+                                <button class="project-card" onclick="window.open('https://www.behance.net/gallery/241849135/ProjectPause-Menopause-Awareness-Thesis-Project')">
+                                    <div class="project-image">
+                                        <img src="images/projects/pause2.png" alt="Interaction Design Project 2" class="project-img">
+                                    </div>
+                                    <h3 class="project-name">ProjectPause | Menopause Awareness | Experience Design</h3>
+                                </button>
+                                
                                 <button class="project-card" onclick="window.open('https://www.behance.net/gallery/224610131/WELLSI-Your-Wellness-Ally-%28Virtual-Health-Companion%29', '_blank')">
                                     <div class="project-image">
                                         <img src="images/projects/wellsi2.png" alt="Interaction Design Project 1" class="project-img">
