--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
                                     <div class="project-image">
                                         <img src="images/projects/pause2.png" alt="Interaction Design Project 1" class="project-img">
                                     </div>
-                                    <h3 class="project-name">ProjectPause | Menopause Awareness | Experience Design</h3>
+                                    <h3 class="project-name">ProjectPause | Menopause Awareness | Thesis Project | Experience Design</h3>
                                 </button>
                                 
                                 <button class="project-card" onclick="window.open('https://www.behance.net/gallery/224610131/WELLSI-Your-Wellness-Ally-%28Virtual-Health-Companion%29', '_blank')">
